// ヘルスチェックリクエスト
syntax = "proto3";

package api.admin;

message HealthCheckRequest {
  int64 health_id = 1;
}
