// ヘルスチェック
syntax = "proto3";

package api.admin;

import "health/masterHealth/master_health_enum.proto";

message MasterHealth {
  int64 health_id = 1;
  string name = 2;
  MasterHealthEnum master_health_enum = 3;
}
